<resources>
    <string name="app_name">Purdue HCR</string>
    <string name="passwordInputHint">Password (6 character minimum)</string>
    <string name="signInButton">Sign In</string>
    <string name="emailInputHint">E-mail (Must be a valid Purdue email)</string>
    <string name="signUpButton">Sign Up</string>
    <string name="confirmPasswordInputHint">Confirm Password</string>
    <string name="nameInputHint">Name (First and Last)</string>
    <string name="RHPCodeInputHint">House Code</string>
    <string name="enter_link">Please enter your link</string>
    <string name="generate_code">Generate Code</string>
    <string name="no_point_types_enabled">No point types enabled.</string>
    <string name="submit_point">Submit Point</string>
    <string name="description_required">Description (Required)</string>
    <string name="point_type_label">Point Type</string>
    <string name="first_name_request_label">Preferred First Name</string>
    <string name="last_name_request_label" translatable="false">Preferred Last Name</string>
    <string name="link_house_button">Join the Purdue HCR</string>
    <string name="no_results_found">No results found.</string>
    <string name="filler_point_type_message">This is where a point type would go if there were one. It could be long and has to wrap well!</string>
    <string name="filler_point_details_message">This is where a point type desciption would go too.</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="view_points">View My Points</string>
    <string name="view_points_alert">⚠️View My Points⚠️</string>
    <string name="house_overview">House Point History</string>
    <string name="house_overview_alert">House Point History ⚠️</string>
    <string name="alert_icon">⚠️</string>
    <string name="empty_recent_submission">You don\'t have any recent submissions. Go to Submit Points on the side menu to help your house!</string>
    <string name="invalid_point_type_selection">Please Select a Point Type</string>
    <string name="invalid_empty_description">Please Enter a Description</string>
    <string name="invalid_length_description">Max Length is 64 Characters</string>
    <string name="terms_and_policy">I have read and agree to the <a href="https://purduehcr.web.app/terms-and-conditions/">Terms and Conditions</a> and <a href="https://purduehcr.web.app/privacy/">Privacy Policy</a></string>
    <string name="goingyn">GOING?</string>

    <string-array name="share_options">
        <item>Copy Sharing Link</item>
        <item>Save Image</item>
        <item>Share Image</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_laundry_tabs">LaundryTabs</string>
    <string name="washers">Washer</string>
    <string name="dryers">Dryers</string>
    <string name="laundry">Laundry</string>
    <string name="unavailable">Unavailable</string>
    <string-array name="houseList">
        <item>Copper</item>
        <item>Silver</item>
        <item>Palladium</item>
        <item>Platinum</item>
        <item>Titanium</item>
    </string-array>
    <string-array name="floorList">
        <item>All Floors</item>
        <item>Copper House</item>
        <item>Platinum House</item>
        <item> Titanium House</item>
        <item>Silver House</item>
        <item>Palladium House</item>
        <item>1N</item>
        <item>2N</item>
        <item>3N</item>
        <item>4N</item>
        <item>5N</item>
        <item>6N</item>
        <item>1S</item>
        <item>2S</item>
        <item>3S</item>
        <item>4S</item>
        <item>5S</item>
        <item>6S</item>
    </string-array>
</resources>
