<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/point_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/submit_point_type_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filler_point_type_message"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"

            />
        <TextView
            android:id="@+id/submit_point_type_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filler_point_details_message"
            android:paddingTop="4dp"
            android:textAlignment="center"
            android:textStyle="normal"
            android:textSize="12sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/point_type_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:maxLines="5"
            android:hint="@string/description_required"
            android:scrollbars="vertical"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_point_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/submit_point"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>