<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ProgressBar-->
    <!--android:id="@+id/authenticationProgressBar"-->
    <!--style="?android:attr/progressBarStyle"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:layout_marginEnd="16dp"-->
    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:layout_weight="1"-->
    <!--android:clickable="true"-->
    <!--android:elevation="10dp"-->
    <!--android:indeterminate="false"-->
    <!--android:visibility="gone"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="1.0"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.0" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_above="@id/last_name_input_layout">

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/first_name_request_label"
            android:inputType="textCapWords|textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_above="@id/house_code_input_layout">

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/last_name_request_label"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/house_code_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/house_code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/RHPCodeInputHint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/join_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="join"
        android:text="@string/link_house_button"
        android:layout_below="@id/house_code_input_layout"/>
</RelativeLayout>